--- a/package.json
+++ b/package.json
@@ -8,8 +8,21 @@
   "license": "MIT",
   "author": "Kelly Ripple",
   "type": "module",
+  "scripts": {
+    "start": "vite"
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "canvas-confetti": "^1.9.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0"
+  },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^22.15.30",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
     "@vitejs/plugin-react": "^4.5.1",
     "rollup-plugin-visualizer": "^6.0.3",
     "tsx": "^4.19.4",
