--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "canvas-confetti": "^1.9.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "sudoku-gen": "^1.0.2"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.9.0",
