--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lz-string": "^1.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "sudoku-gen": "^1.0.2"
   },
