--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,5 +33,5 @@
     "strictNullChecks": true,
     "target": "ESNext"
   },
-  "include": ["src", "vite.config.ts"]
+  "include": ["src", "vite.config.ts", "config"]
 }
