--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.8.2",
     "canvas-confetti": "^1.9.3",
     "lz-string": "^1.5.0",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
+    "nanoid": "^5.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-redux": "^9.2.0",
     "sudoku-gen": "^1.0.2"
   },
   "devDependencies": {
