--- a/package.json
+++ b/package.json
@@ -13,36 +13,53 @@
     "lint": "eslint . && stylelint '**/*.css' && prettier --check .",
     "test": "playwright test --config config/playwright.config.ts",
     "optimize": "svgo src/app/assets --config config/svgo.config.mjs",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "tsc -p tsconfig.app.json && vite build",
+    "preview": "vite preview",
+    "db:generate": "drizzle-kit generate --config config/drizzle.config.ts",
+    "db:migrate": "dotenvx run -f .env.development -- npm run migrate",
+    "db:deploy": "drizzle-kit migrate --config config/drizzle.config.ts",
+    "api:login": "netlify login",
+    "api:start": "dotenvx run -f .env.development -- netlify dev",
+    "api:build": "rm -rf netlify/edge-functions && tsc -p tsconfig.api.json && tsx vite.api-config.ts",
+    "api:deploy": "netlify env:import .env && netlify deploy --prod"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
+    "@netlify/edge-functions": "^2.15.4",
     "canvas-confetti": "^1.9.3",
+    "drizzle-orm": "^0.44.2",
     "lz-string": "^1.5.0",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
     "nanoid": "^5.1.5",
+    "pg": "^8.16.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "sudoku-gen": "^1.0.2"
   },
   "devDependencies": {
+    "@dotenvx/dotenvx": "^1.44.1",
+    "@netlify/edge-handler-types": "^0.34.1",
     "@playwright/test": "^1.53.0",
     "@types/canvas-confetti": "^1.9.0",
     "@types/lz-string": "^1.3.34",
-    "@types/node": "^22.15.30",
+    "@types/node": "^22.15.34",
+    "@types/pg": "^8.15.4",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
     "@typescript-eslint/eslint-plugin": "7.16.1",
     "@typescript-eslint/parser": "7.16.1",
     "@vitejs/plugin-react": "^4.5.1",
+    "drizzle-kit": "^0.31.4",
     "eslint": "8.56.0",
     "eslint-config-prettier": "10.1.1",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-react": "7.37.4",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.19",
+    "msw": "^2.10.2",
+    "netlify-cli": "^22.2.1",
     "prettier": "^3.5.3",
     "rollup-plugin-visualizer": "^6.0.3",
     "stylelint": "^16.18.0",
