--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "tsc -p tsconfig.app.json && vite build",
     "preview": "vite preview",
     "db:generate": "drizzle-kit generate --config config/drizzle.config.ts",
-    "db:migrate": "dotenvx run -f .env.development -- npm run migrate",
+    "db:migrate": "dotenvx run -f .env.development -- npm run db:deploy",
     "db:deploy": "drizzle-kit migrate --config config/drizzle.config.ts",
     "api:login": "netlify login",
     "api:start": "dotenvx run -f .env.development -- netlify dev",
