--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,4 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["src/api/**", "**/*.test.ts", "**/*.e2e.ts"]
+  "exclude": ["src/backend/**", "**/*.test.ts", "**/*.e2e.ts"]
 }
