--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
     "@netlify/edge-functions": "^2.15.4",
+    "@tanstack/query-async-storage-persister": "^5.81.5",
+    "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-query-devtools": "^5.81.5",
+    "@tanstack/react-query-persist-client": "^5.81.5",
     "canvas-confetti": "^1.9.3",
     "drizzle-orm": "^0.44.2",
-    "lz-string": "^1.5.0",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
     "nanoid": "^5.1.5",
