--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "author": "Kelly Ripple",
   "type": "module",
   "scripts": {
-    "start": "vite",
+    "start": "npm run api:start",
     "lint": "eslint . && stylelint '**/*.css' && prettier --check .",
     "test": "playwright test --config config/playwright.config.ts",
-    "optimize": "svgo src/app/assets --config config/svgo.config.mjs",
-    "build": "tsc -p tsconfig.app.json && vite build",
-    "preview": "vite preview",
+    "build": "npm run app:build && npm run api:build",
+    "svgo": "svgo src/app/assets --config config/svgo.config.mjs",
+    "app:start": "vite",
+    "app:build": "tsc -p tsconfig.app.json && vite build",
+    "app:preview": "vite preview",
     "db:generate": "drizzle-kit generate --config config/drizzle.config.ts",
     "db:migrate": "dotenvx run -f .env.development -- npm run db:deploy",
     "db:deploy": "drizzle-kit migrate --config config/drizzle.config.ts",
